# dns-stub

./: .gitignore  AUTOSTART.md  Cargo.toml  README.md  justfile  run.sh
autostart/: 10-dns-stub.netdev  20-dns-stub.network  README.md  dns-stub.service
scripts/: dns_addr_change.sh  resolve_dns.sh  setup_dummy_interface.sh
src/: cli.rs  main.rs  parse_request.rs
systemd-config/dot_config/systemd/user/: dns-stub.service
systemd-config/dot_root/etc/systemd/network/: 11-dns-stub.network
