[package]
name = "dns-stub"
version = "0.1.0"
edition = "2021"
authors = ["Ovidiu Ionescu <ovidiu@ionescu.net>"]
description = "A DNS stub resolver. It will reply with the same IP address for all queries."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
env_logger = "0.10.0"
libc = "0.2.148"
log = "0.4.20"
