[package]
name = "dns-stub"
version = "0.2.0"
edition = "2024"
authors = ["Ovidiu Ionescu <ovidiu@ionescu.net>"]
description = "A DNS stub resolver. It can be configured with a list of domain=ip and for the rest will reply with a default IP address."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
env_logger = "0.10.0"
libc = "0.2.148"
log = "0.4.20"
